@@ -4,7 +4,7 @@ from celery import Celery
 from kombu import Exchange, Queue
 from kombu.common import Broadcast
 from sim_chat_lib.master import send_take_photo_by_imei, send_photo_list_by_imei, send_firmware_update, \
-    send_restart_device, send_restart_gps, send_toggle_debug
+    send_restart_device, send_restart_gps, send_toggle_debug, send_set_pin
 from sim_chat_lib.master import send_cancel_firmware_update, send_update_configuration
 
 CELERY_BROKER_URL = os.environ.get('CELERY_BROKER_URL', 'amqp://guest@localhost')
@@ -77,6 +77,12 @@ def restart_gps(imei):
 @sim_chat_server_celery_app.task(name='sim_chat_lib.celerytasks.sendcommand.toggle_debug')
 def toggle_debug(imei):
     result = send_toggle_debug(imei)
+    return 'Issued debug toggle for device {} with result {}'.format(imei, result)
+
+
+@sim_chat_server_celery_app.task(name='sim_chat_lib.celerytasks.sendcommand.set_pin')
+def set_pin(imei, pin, state):
+    result = send_set_pin(imei, pin, state)
     return 'Issued debug toggle for device {} with result {}'.format(imei, result)
 
 
